# PhaseFieldRanking

./: .gitignore  AE.joblib  Hf_TM_In_VAE_scores.csv  LICENSE  Li-M-O-S_test_scores.csv  Li-M-Si-O-S_test_scores.csv  LiXXSI_scores.csv  MANIFEST.in  OS_test  README.md  README.rst  Validation_quaternary_VAE_subset1.csv  Validation_quinary_AE_subset1.csv  Validation_quinary_AE_subset2.csv  Validation_quinary_AE_subset3.csv  Validation_quinary_AE_subset4.csv  Validation_quinary_AE_subset5.csv  config.yaml  encoder.input  icsd2021_phases.csv  intermet.input  intermetallics_ternaries.csv  packaging_readme  postsort.py  postsort_and_plothist.py  pyproject.toml  quaternary-Li-M-O-S.input  quaternary_VAE_LEAF_59_test_scores.csv  quaternary_VAE_LEAF_59_training_scores.csv  quinary.input  quinaryOS_AE_testing_scores.csv  quinary_AE_training_scores.csv  quinary_Li-M-Si-O-S.input  quinary_testing_scores_n_5_n.csv  quinary_training_scores.csv  rankfields  ranking_phase_fields.py  rpp.input  setup.py  ternary_VAE_training_scores.csv  (+3 more)
JupyterRanking/: MMAA.csv  MMAA_with_features.csv  MMXAA_with_features.csv  environment.yml  phase_field_ranking.py  quaternary_wo_YNbO.csv
TABLES/: AtomicVolume.table  BCCenergydiff.table  BCCvolume_pa.table  BCCvolume_padiff.table  BoilingT.table  GSefflatcnt.table  GSenergy_pa.table  NpUnfilled.table  NsUnfilled.table  NsValence.table  Polarizability.table
elemental_features/: LEAF1001.csv  LEAF_59.csv  LEAF_81.csv  LEAF_81_97el.csv  LEAF_decimal3_onehot_trained1001.pickle  LEAF_decimal3_onehot_trained200.pickle  magpie_37.csv  random_200.csv
(+501 files in other folders)
